mime tests